--- a/APM-Start/src/app/products/product-edit/product-edit-info.component.html
+++ b/APM-Start/src/app/products/product-edit/product-edit-info.component.html
@@ -1,6 +1,5 @@
 <div class="card-body">
-  <form novalidate
-        #productForm="ngForm">
+  <form novalidate>
     <fieldset>
       <legend>Basic Product Information</legend>
 
@@ -17,9 +16,9 @@
                  [(ngModel)]=product.productName
                  name="productName"
                  #productNameVar="ngModel"
-                 [ngClass]="{'is-invalid': (productNameVar.touched || 
+                 [ngClass]="{'is-invalid': (productNameVar.touched ||
                                             productNameVar.dirty ||
-                                            product.id !== 0) && 
+                                            product.id !== 0) &&
                                             !productNameVar.valid }" />
           <span class="invalid-feedback">
             <span *ngIf="productNameVar.errors?.required">
@@ -44,7 +43,7 @@
                  [(ngModel)]=product.productCode
                  name="productCode"
                  #productCodeVar="ngModel"
-                 [ngClass]="{'is-invalid': (productCodeVar.touched || 
+                 [ngClass]="{'is-invalid': (productCodeVar.touched ||
                                             productCodeVar.dirty ||
                                             product.id !== 0) &&
                                             !productCodeVar.valid }" />
