Use resolved product data from parent routes. Reset validation in info form after changing the route

--- a/APM-Start/src/app/products/product-edit/product-edit-info.component.html
+++ b/APM-Start/src/app/products/product-edit/product-edit-info.component.html
@@ -1,5 +1,6 @@
 <div class="card-body">
-  <form novalidate>
+  <form novalidate
+    #productForm = "ngForm">
     <fieldset>
       <legend>Basic Product Information</legend>
 
