Renamed ProductListTest file to the isolated. Created Intergated test for ProductListComponent to check if the right name of the product is shown in the corresponding div

--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -47,7 +47,7 @@
                    [style.margin.px]="imageMargin">
             </td>
             <td>
-              <a [routerLink]="['/products', product.id]" [queryParams]="{filterBy: listFilter, showImage: showImage}">
+              <a [routerLink]="['/products', product.id]" [queryParams]="{filterBy: listFilter, showImage: showImage}" well-title>
                 {{ product.productName }}
               </a>
             </td>
